# voice-gpt

./: .gitignore  AGENTS.md  Makefile  README.md  chat_2026-01-04.md  constraints-cpu.txt  pyproject.toml
.beads/: issues.jsonl
docs/: benchmark_results.md
docs/notes/: system-info.md
scripts/: benchmark_transcribe.sh  dedupe_journal.py  install_whisper_cpp.sh
stt/: __init__.py  cli.py  embeddings.py  faiss_index.py  journal.py  offline.py  query_cli.py  settings.py  torch_compat.py  transcribe.py  vad.py
voice_gpt/: __init__.py  cli.py  embeddings.py  journal.py  settings.py  transcribe.py
